Creación del Header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/components/header.css">
 
     <!-- Fonts -->
     <!-- Manrope -->
@@ -23,6 +25,22 @@
 </head>
 
 <body>
+    <div class="container">
+        <header>
+            <figure>
+                <img src="img/mascara.png" alt="Logo de RioMagico">
+            </figure>
+            <nav>
+                <ul>
+                    <li><a href="#">Atracciones</a></li>
+                    <li><a href="#">Dónde comer</a></li>
+                    <li><a href="#">Dónde alojarse</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
 </body>
 
 </html>
