Añadir fondo y estructura al header, y crear sección "¿Por qué Río de Janeiro?" con contenido y estilos

--- a/index.html
+++ b/index.html
@@ -25,22 +25,53 @@
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <figure>
-                <img src="img/mascara.png" alt="Logo de RioMagico">
-            </figure>
-            <nav>
-                <ul>
-                    <li><a href="#">Atracciones</a></li>
-                    <li><a href="#">Dónde comer</a></li>
-                    <li><a href="#">Dónde alojarse</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
+    <div class="background"></div>
+
+    <div class="presentacion">
+        <div class="container">
+            <header>
+                <figure>
+                    <img src="img/mascara.png" alt="Logo de RioMagico">
+                </figure>
+                <nav>
+                    <ul>
+                        <li><a href="#">Atracciones</a></li>
+                        <li><a href="#">Dónde comer</a></li>
+                        <li><a href="#">Dónde alojarse</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contacto</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
     </div>
+
+    <section id="porQue">
+        <div class="container">
+            <div class="txt">
+                <h2>¿Por qué Río de Janeiro?</h2>
+                <p>Río de Janeiro no es solo una ciudad, es una
+                    forma de sentir la vida. Es música en las calles,
+                    calor humano en cada sonrisa y paisajes que
+                    te dejan sin aliento. Acá, la naturaleza y
+                    la cultura se mezclan en un ritmo
+                    único: el del mar, el samba y el corazón.</p>
+                <p>Venir a Río no es hacer turismo, es sumergirse
+                    en una forma distinta de vivir. Es despertarse
+                    con vistas al Pan de Azúcar, perder la noción
+                    del tiempo en Ipanema y cerrar el día bailando
+                    al ritmo del carnaval, incluso si no es febrero.
+                    Es probar sabores nuevos, escuchar historias
+                    en las favelas turísticas y sentir que cada
+                    momento tiene algo que celebrar.</p>
+            </div>
+            <figure class="img">
+                <img src="img/Imagen_1.png" alt="Imagen de una bailarina de samba">
+            </figure>
+        </div>
+    </section>
+    <section id="galeria"></section>
+
 </body>
 
 </html>
