Añadir footer con enlaces a redes sociales y estilos correspondientes

--- a/index.html
+++ b/index.html
@@ -72,6 +72,25 @@
     </section>
     <section id="galeria"></section>
 
+    <footer>
+        <div class="container">
+            <figure>
+                <img src="img/mascara.png" alt="Logo de RioMagico">
+            </figure>
+
+            <div class="redesSociales">
+                <h3>Siguenos</h3>
+                <figure>
+                    <img src="img/icon/facebook.svg" alt="Icono de Facebook">
+                    <img src="img/icon/instagram.svg" alt="Icono de Instagram">
+                    <img src="img/icon/x.svg" alt="Icono de X(ex Twiter)">
+                    <img src="img/icon/tiktok.svg" alt="Icono de TikTok">
+                </figure>
+            </div>
+        </div>
+
+        <span class="copyright">© 2025 All Rights Reserved Developed by in.</span>
+    </footer>
 </body>
 
 </html>
