--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/mascara.png" type="image/x-icon">
     <title>Rio Magico - Home</title>
 
     <!-- CSS -->
