--- a/index.html
+++ b/index.html
@@ -9,19 +9,16 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/components/header.css">
+    <link rel="stylesheet" href="styles/components/footer.css">
+    <link rel="stylesheet" href="styles/index.css">
 
     <!-- Fonts -->
-    <!-- Manrope -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-    <!-- Poppins -->
+    <!-- Manrope y Poppins-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 </head>
 
@@ -29,7 +26,7 @@
     <div class="background"></div>
 
     <div class="presentacion">
-        <div class="container">
+        <div class="container-extenso">
             <header>
                 <figure>
                     <img src="img/mascara.png" alt="Logo de RioMagico">
@@ -44,6 +41,11 @@
                     </ul>
                 </nav>
             </header>
+            <div class="txt">
+                <span>
+                    Viví, explora y disfruta de lo mágico de Río de Janeiro
+                </span>
+            </div>
         </div>
     </div>
 
