Añadiendo la galeria con sus estilos

--- a/index.html
+++ b/index.html
@@ -73,7 +73,23 @@
             </figure>
         </div>
     </section>
-    <section id="galeria"></section>
+
+    <section id="galeria">
+        <div class="container-corto">
+            <h2>Galeria</h2>
+            <figure class="filas">
+                <img src="img/galeria/rioDeJaneiro_1.jpg" alt="">
+                <img src="img/galeria/rioDeJaneiro_6.png" alt="">
+                <img src="img/galeria/rioDeJaneiro_4.png" alt="">
+                <img src="img/galeria/rioDeJaneiro_5.png" alt="">
+            </figure>
+            <figure class="filas">
+                <img src="img/galeria/rioDeJaneiro_3.png" alt="">
+                <img src="img/galeria/rioDeJaneiro_7.png" alt="">
+                <img src="img/galeria/rioDeJaneiro_2.png" alt="">
+            </figure>
+        </div>
+    </section>
 
     <footer>
         <div class="container">
