--- a/home.html
+++ b/home.html
@@ -9,8 +9,6 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/components/header.css">
-    <link rel="stylesheet" href="styles/components/footer.css">
     <link rel="stylesheet" href="styles/index.css">
 
     <!-- Fonts -->
@@ -33,7 +31,7 @@
                 </figure>
                 <nav>
                     <ul>
-                        <li><a href="#">Atracciones</a></li>
+                        <li><a href="pages/atracciones.html">Atracciones</a></li>
                         <li><a href="#">Dónde comer</a></li>
                         <li><a href="#">Dónde alojarse</a></li>
                         <li><a href="#">Blog</a></li>
