Add navigation links to logo in home and attractions pages

--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -23,9 +23,11 @@
 <body>
     <div class="container-extenso">
         <header>
-            <figure>
-                <img src="../img/mascara.png" alt="Logo de RioMagico">
-            </figure>
+            <a href="../home.html">
+                <figure>
+                    <img src="../img/mascara.png" alt="Logo de RioMagico">
+                </figure>
+            </a>
             <nav>
                 <ul>
                     <li><a href="pages/atracciones.html">Atracciones</a></li>
