--- a/home.html
+++ b/home.html
@@ -26,9 +26,11 @@
     <div class="presentacion">
         <div class="container-extenso">
             <header>
-                <figure>
-                    <img src="img/mascara.png" alt="Logo de RioMagico">
-                </figure>
+                <a href="/index.html">
+                    <figure>
+                        <img src="img/mascara.png" alt="Logo de RioMagico">
+                    </figure>
+                </a>
                 <nav>
                     <ul>
                         <li><a href="pages/atracciones.html">Atracciones</a></li>
@@ -109,10 +111,11 @@
 
     <footer>
         <div class="container">
-            <figure>
-                <img src="img/mascara.png" alt="Logo de RioMagico">
-            </figure>
-
+            <a href="/home.html">
+                <figure>
+                    <img src="img/mascara.png" alt="Logo de RioMagico">
+                </figure>
+            </a>
             <div class="redesSociales">
                 <h3>Siguenos</h3>
                 <figure>
