--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -10,14 +10,6 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/atracciones.css">
-
-    <!-- Fonts -->
-    <!-- Manrope y Poppins-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
 </head>
 
 <body>
@@ -39,6 +31,61 @@
             </nav>
         </header>
     </div>
+
+    <div class="container-corto">
+        <main>
+
+        </main>
+
+        <section>
+            <h2>Cristo Redentor</h2>
+            <p>El Cristo Redentor es una de las atracciones más emblemáticas de Río de Janeiro y del mundo. Esta
+                majestuosa estatua de 38 metros de altura, ubicada en la cima del Cerro del Corcovado, ofrece una vista
+                panorámica impresionante de la ciudad. Declarado una de las Nuevas Siete Maravillas del Mundo, el Cristo
+                Redentor es un símbolo de paz y hospitalidad que atrae a millones de visitantes cada año.</p>
+        </section>
+        <section>
+            <h2>Parque Nacional Tijuca</h2>
+            <p>El Parque Nacional Tijuca es una vasta área de bosque tropical ubicada en el corazón de Río de Janeiro.
+                Es considerado uno de los mayores bosques urbanos del mundo y ofrece una rica biodiversidad, cascadas,
+                senderos y vistas espectaculares. Este parque es ideal para los amantes de la naturaleza y el
+                ecoturismo, proporcionando un escape tranquilo del bullicio de la ciudad.</p>
+        </section>
+        <section>
+            <h2>Museo do Amanha</h2>
+            <p>Inaugurado en 2015, el Museo do Amanha es un impresionante centro científico que explora las
+                posibilidades del futuro. Su arquitectura única, diseñada por el reconocido arquitecto Santiago
+                Calatrava, se asemeja a una estructura orgánica que cambia de forma a lo largo del día. El museo cuenta
+                con cinco áreas principales: Cosmos, Tierra, Antropoceno, Mañana y Nosotros, donde los visitantes pueden
+                explorar exhibiciones interactivas sobre sostenibilidad, cambio climático, biodiversidad y el futuro de
+                la humanidad. Las exposiciones se actualizan constantemente con datos en tiempo real de instituciones
+                científicas de todo el mundo.</p>
+        </section>
+
+        <section>
+            <h2>Pán de Azúcar</h2>
+            <p>El Pán de Azúcar, con sus 396 metros de altura, es uno de los símbolos más reconocibles de Río de
+                Janeiro. El ascenso se realiza en dos etapas mediante teleféricos modernos que han estado en
+                funcionamiento desde 1912, siendo uno de los primeros sistemas de este tipo en el mundo. El primer tramo
+                lleva a los visitantes al Morro da Urca, y el segundo alcanza la cima del Pán de Azúcar. Desde aquí, los
+                visitantes pueden disfrutar de vistas panorámicas de 360 grados que incluyen las famosas playas de
+                Copacabana e Ipanema, el Cristo Redentor y toda la bahía de Guanabara. Es especialmente popular durante
+                el atardecer, cuando el sol se pone sobre la ciudad creando un espectáculo de luces inolvidable.</p>
+        </section>
+
+        <section>
+            <h2>Parque Lage</h2>
+            <p>El Parque Lage es una joya histórica situada al pie del Corcovado. Esta antigua mansión del siglo XIX,
+                que perteneció al industrial Enrique Lage y su esposa, la cantante de ópera Gabriella Besanzoni, hoy
+                alberga la Escuela de Artes Visuales. Los visitantes pueden explorar sus magníficos jardines diseñados
+                en estilo inglés, con fuentes, estanques y una vegetación exuberante típica de la Mata Atlántica. El
+                palacete principal, con su arquitectura romántica italiana, cuenta con un patio central con piscina que
+                ofrece una vista única del Cristo Redentor enmarcado por las columnas del edificio. El parque también
+                dispone de una cafetería en el antiguo comedor de la mansión, senderos ecológicos y exposiciones de arte
+                contemporáneo.</p>
+        </section>
+    </div>
+
 
     <footer>
         <div class="container">
