modificar la descripción de atracciones

--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -39,51 +39,68 @@
 
         <section>
             <h2>Cristo Redentor</h2>
-            <p>El Cristo Redentor es una de las atracciones más emblemáticas de Río de Janeiro y del mundo. Esta
-                majestuosa estatua de 38 metros de altura, ubicada en la cima del Cerro del Corcovado, ofrece una vista
-                panorámica impresionante de la ciudad. Declarado una de las Nuevas Siete Maravillas del Mundo, el Cristo
-                Redentor es un símbolo de paz y hospitalidad que atrae a millones de visitantes cada año.</p>
-        </section>
-        <section>
-            <h2>Parque Nacional Tijuca</h2>
-            <p>El Parque Nacional Tijuca es una vasta área de bosque tropical ubicada en el corazón de Río de Janeiro.
-                Es considerado uno de los mayores bosques urbanos del mundo y ofrece una rica biodiversidad, cascadas,
-                senderos y vistas espectaculares. Este parque es ideal para los amantes de la naturaleza y el
-                ecoturismo, proporcionando un escape tranquilo del bullicio de la ciudad.</p>
-        </section>
-        <section>
-            <h2>Museo do Amanha</h2>
-            <p>Inaugurado en 2015, el Museo do Amanha es un impresionante centro científico que explora las
-                posibilidades del futuro. Su arquitectura única, diseñada por el reconocido arquitecto Santiago
-                Calatrava, se asemeja a una estructura orgánica que cambia de forma a lo largo del día. El museo cuenta
-                con cinco áreas principales: Cosmos, Tierra, Antropoceno, Mañana y Nosotros, donde los visitantes pueden
-                explorar exhibiciones interactivas sobre sostenibilidad, cambio climático, biodiversidad y el futuro de
-                la humanidad. Las exposiciones se actualizan constantemente con datos en tiempo real de instituciones
-                científicas de todo el mundo.</p>
+            <p>El Cristo Redentor es uno de los monumentos más icónicos del mundo, ubicado en la cima del cerro
+                Corcovado. Con sus 30 metros de altura y brazos extendidos, ofrece una vista panorámica impresionante de
+                la ciudad de Río de Janeiro.</p>
         </section>
 
         <section>
-            <h2>Pán de Azúcar</h2>
-            <p>El Pán de Azúcar, con sus 396 metros de altura, es uno de los símbolos más reconocibles de Río de
-                Janeiro. El ascenso se realiza en dos etapas mediante teleféricos modernos que han estado en
-                funcionamiento desde 1912, siendo uno de los primeros sistemas de este tipo en el mundo. El primer tramo
-                lleva a los visitantes al Morro da Urca, y el segundo alcanza la cima del Pán de Azúcar. Desde aquí, los
-                visitantes pueden disfrutar de vistas panorámicas de 360 grados que incluyen las famosas playas de
-                Copacabana e Ipanema, el Cristo Redentor y toda la bahía de Guanabara. Es especialmente popular durante
-                el atardecer, cuando el sol se pone sobre la ciudad creando un espectáculo de luces inolvidable.</p>
+            <h2>Parque Nacional Tijuca</h2>
+            <p>El Parque Nacional Tijuca es una selva urbana que alberga una gran biodiversidad, senderos para caminatas
+                y cascadas. Es ideal para quienes buscan naturaleza y aventura en medio de la ciudad.</p>
+        </section>
+
+        <section>
+            <h2>Museo do Amanhã</h2>
+            <p>Ubicado en el puerto de Río, el Museo del Mañana combina ciencia, arte y tecnología para explorar los
+                desafíos del futuro de la humanidad y el planeta. Su arquitectura futurista es también un gran atractivo
+                visual.</p>
+        </section>
+
+        <section>
+            <h2>Pan de Azúcar</h2>
+            <p>El Pan de Azúcar es un cerro con forma de domo que ofrece una de las vistas más espectaculares de Río. Se
+                puede llegar a la cima mediante un teleférico que brinda una experiencia inolvidable.</p>
         </section>
 
         <section>
             <h2>Parque Lage</h2>
-            <p>El Parque Lage es una joya histórica situada al pie del Corcovado. Esta antigua mansión del siglo XIX,
-                que perteneció al industrial Enrique Lage y su esposa, la cantante de ópera Gabriella Besanzoni, hoy
-                alberga la Escuela de Artes Visuales. Los visitantes pueden explorar sus magníficos jardines diseñados
-                en estilo inglés, con fuentes, estanques y una vegetación exuberante típica de la Mata Atlántica. El
-                palacete principal, con su arquitectura romántica italiana, cuenta con un patio central con piscina que
-                ofrece una vista única del Cristo Redentor enmarcado por las columnas del edificio. El parque también
-                dispone de una cafetería en el antiguo comedor de la mansión, senderos ecológicos y exposiciones de arte
-                contemporáneo.</p>
+            <p>Parque Lage es un jardín público ubicado al pie del Corcovado. Cuenta con un palacio histórico, lagos y
+                senderos entre la vegetación, siendo un lugar popular entre artistas, fotógrafos y amantes de la
+                naturaleza.</p>
         </section>
+
+        <section>
+            <h2>Vista Chinesa</h2>
+            <p>La Vista Chinesa es un mirador situado en las alturas del Parque Nacional Tijuca, conocido por su
+                estructura en estilo oriental y vistas panorámicas del Cristo Redentor, la Bahía de Guanabara y el Pan
+                de Azúcar.</p>
+        </section>
+
+        <section>
+            <h2>Catedral Metropolitana de San Sebastián</h2>
+            <p>Esta catedral moderna sorprende por su forma cónica inspirada en las pirámides mayas. Su interior alberga
+                vitrales monumentales que bañan de color el espacio con la luz del sol.</p>
+        </section>
+
+        <section>
+            <h2>Mirante Dona Marta</h2>
+            <p>Este mirador ofrece una de las mejores vistas de la ciudad, incluyendo el Cristo Redentor y el Pan de
+                Azúcar. Es un punto privilegiado para sacar fotos inolvidables, especialmente al atardecer.</p>
+        </section>
+
+        <section>
+            <h2>Leblon Beach</h2>
+            <p>La playa de Leblon es una de las más exclusivas y tranquilas de Río. Ideal para relajarse, practicar
+                deportes y disfrutar de la vista del Morro Dois Irmãos al fondo.</p>
+        </section>
+
+        <section>
+            <h2>Praia de Copacabana</h2>
+            <p>Copacabana es la playa más famosa de Brasil. Con su amplia franja de arena, su paseo marítimo ondulado y
+                su ambiente vibrante, es un símbolo del espíritu carioca.</p>
+        </section>
+
     </div>
 
 
