--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/mascara.png" type="image/x-icon">
+    <meta name="description" content="Descubre la magia de Río de Janeiro con Rio Magico. Atracciones, gastronomía, alojamiento y más. Vive la experiencia única de esta vibrante ciudad brasileña.">
     <title>Rio Magico - Home</title>
 
     <!-- CSS -->
