Add gradient background and new section styles to attractions page

--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/mascara.png" type="image/x-icon">
+    <meta name="description" content="Sitio web dedicado a las atracciones turísticas de Río de Janeiro, Brasil. Descubre los lugares más emblemáticos y actividades imperdibles en la ciudad maravillosa.">
     <title>Rio Magico - Atracciones</title>
 
     <!-- CSS -->
@@ -38,69 +39,160 @@
         </main>
 
         <section>
-            <h2>Cristo Redentor</h2>
-            <p>El Cristo Redentor es uno de los monumentos más icónicos del mundo, ubicado en la cima del cerro
-                Corcovado. Con sus 30 metros de altura y brazos extendidos, ofrece una vista panorámica impresionante de
-                la ciudad de Río de Janeiro.</p>
+            <div class="txt">
+                <h2>Cristo Redentor</h2>
+                <p>El Cristo Redentor es uno de los símbolos más representativos de Brasil y una de las siete maravillas
+                    del mundo moderno. Inaugurado en 1931, esta imponente estatua de 30 metros de altura representa a
+                    Jesucristo con los brazos abiertos como un gesto de paz y acogida. Se encuentra en la cima del cerro
+                    Corcovado, dentro del Parque Nacional de Tijuca, a 710 metros sobre el nivel del mar. Desde su base,
+                    los visitantes pueden disfrutar de una vista panorámica de 360° de Río de Janeiro, incluyendo las
+                    playas de Ipanema, Copacabana y el Pan de Azúcar. De noche, el Cristo es iluminado, creando una
+                    imagen majestuosa que domina el horizonte carioca.</p>
+            </div>
+            <figure>
+                <img src="../img/image/cristo-redentor.webp" alt="Imagen de Cristo Redentor">
+            </figure>
         </section>
 
         <section>
-            <h2>Parque Nacional Tijuca</h2>
-            <p>El Parque Nacional Tijuca es una selva urbana que alberga una gran biodiversidad, senderos para caminatas
-                y cascadas. Es ideal para quienes buscan naturaleza y aventura en medio de la ciudad.</p>
+            <div class="txt">
+                <h2>Parque Nacional Tijuca</h2>
+                <p>Con más de 3.900 hectáreas, el Parque Nacional Tijuca es considerado el bosque urbano replantado más
+                    grande del mundo. Se trata de un ecosistema de Mata Atlántica que ofrece una experiencia única para
+                    los amantes de la naturaleza. El parque alberga cascadas como la Taunay, fauna nativa, grutas y
+                    picos como el Pico da Tijuca, ideal para senderismo. Esta zona fue reforestada en el siglo XIX para
+                    proteger las fuentes de agua que abastecían a la ciudad. Además, cuenta con varios miradores y es
+                    hogar de sitios turísticos importantes como el Cristo Redentor y la Vista Chinesa.</p>
+            </div>
+            <figure>
+                <img src="../img/image/parque-nacional-tijuca.webp" alt="Imagen de Parque Nacional Tijuca">
+            </figure>
         </section>
 
         <section>
-            <h2>Museo do Amanhã</h2>
-            <p>Ubicado en el puerto de Río, el Museo del Mañana combina ciencia, arte y tecnología para explorar los
-                desafíos del futuro de la humanidad y el planeta. Su arquitectura futurista es también un gran atractivo
-                visual.</p>
+            <div class="txt">
+                <h2>Museo do Amanhã</h2>
+                <p>El Museo del Mañana es un espacio interactivo dedicado a la ciencia y la sostenibilidad. Su edificio,
+                    diseñado por el arquitecto Santiago Calatrava, se ha convertido en un ícono de la arquitectura
+                    moderna en Río. Inaugurado en 2015, propone una reflexión sobre el futuro del planeta a través de
+                    experiencias sensoriales, exposiciones multimedia e instalaciones educativas. El museo aborda temas
+                    como el cambio climático, la biodiversidad y la tecnología desde una perspectiva humanista y
+                    crítica. Su ubicación en la renovada zona portuaria lo convierte en una parada ideal para quienes
+                    disfrutan de la ciencia, el arte y el urbanismo.</p>
+            </div>
+            <figure>
+                <img src="../img/image/museo-do-amanhã.webp" alt="Imagen de Museo do Amanhã">
+            </figure>
         </section>
 
         <section>
-            <h2>Pan de Azúcar</h2>
-            <p>El Pan de Azúcar es un cerro con forma de domo que ofrece una de las vistas más espectaculares de Río. Se
-                puede llegar a la cima mediante un teleférico que brinda una experiencia inolvidable.</p>
+            <div class="txt">
+                <h2>Pan de Azúcar</h2>
+                <p>El Pan de Azúcar, o "Pão de Açúcar" en portugués, es una formación rocosa que se eleva 396 metros
+                    sobre el nivel del mar en la entrada de la Bahía de Guanabara. Su nombre proviene de la época
+                    colonial, cuando los portugueses moldeaban el azúcar en formas cónicas similares. Se puede acceder
+                    mediante un famoso teleférico que parte desde la estación de Praia Vermelha y hace una parada
+                    intermedia en el Morro da Urca. Desde la cima, se obtiene una de las vistas más espectaculares de la
+                    ciudad, especialmente al atardecer. Es un sitio imperdible para turistas, fotógrafos y amantes del
+                    paisaje.</p>
+            </div>
+            <figure>
+                <img src="../img/image/pan-de-azúcar.webp" alt="Imagen de Pan de Azúcar">
+            </figure>
         </section>
 
         <section>
-            <h2>Parque Lage</h2>
-            <p>Parque Lage es un jardín público ubicado al pie del Corcovado. Cuenta con un palacio histórico, lagos y
-                senderos entre la vegetación, siendo un lugar popular entre artistas, fotógrafos y amantes de la
-                naturaleza.</p>
+            <div class="txt">
+                <h2>Parque Lage</h2>
+                <p>Ubicado al pie del Corcovado, el Parque Lage es un oasis natural con un rico valor histórico y
+                    cultural. El parque rodea una mansión del siglo XIX que hoy alberga la Escola de Artes Visuais
+                    (EAV). Su arquitectura de estilo ecléctico y su patio central con piscina se han convertido en
+                    escenarios populares para sesiones de fotos y videoclips. Entre sus senderos se encuentran grutas
+                    artificiales, lagos con peces, jardines ingleses y una cafetería muy frecuentada. Es el lugar ideal
+                    para una caminata tranquila, una clase de dibujo al aire libre o simplemente relajarse rodeado de
+                    vegetación exuberante.</p>
+            </div>
+            <figure>
+                <img src="../img/image/parque-lage.webp" alt="Imagen de Parque Lage">
+            </figure>
         </section>
 
         <section>
-            <h2>Vista Chinesa</h2>
-            <p>La Vista Chinesa es un mirador situado en las alturas del Parque Nacional Tijuca, conocido por su
-                estructura en estilo oriental y vistas panorámicas del Cristo Redentor, la Bahía de Guanabara y el Pan
-                de Azúcar.</p>
+            <div class="txt">
+                <h2>Vista Chinesa</h2>
+                <p>La Vista Chinesa es uno de los miradores más bonitos de Río de Janeiro, situado a 380 metros de
+                    altitud en el Parque Nacional Tijuca. Su nombre proviene del pabellón en estilo oriental construido
+                    en honor a los inmigrantes chinos que trabajaron en la plantación de té en el siglo XIX. Desde aquí
+                    se pueden ver lugares emblemáticos como el Cristo Redentor, la Laguna Rodrigo de Freitas, el Pan de
+                    Azúcar y las playas de la zona sur. Es una parada habitual en rutas de ciclistas y fotógrafos que
+                    buscan capturar el amanecer o el atardecer desde este punto estratégico.</p>
+            </div>
+            <figure>
+                <img src="../img/image/vista-chinesa.webp" alt="Imagen de Vista Chinesa">
+            </figure>
         </section>
 
         <section>
-            <h2>Catedral Metropolitana de San Sebastián</h2>
-            <p>Esta catedral moderna sorprende por su forma cónica inspirada en las pirámides mayas. Su interior alberga
-                vitrales monumentales que bañan de color el espacio con la luz del sol.</p>
+            <div class="txt">
+                <h2>Catedral Metropolitana de San Sebastián</h2>
+                <p>Diseñada por el arquitecto Edgar de Oliveira da Fonseca, la Catedral Metropolitana de San Sebastián
+                    es una joya de la arquitectura moderna brasileña. Su forma cónica, inspirada en las pirámides mayas,
+                    y sus 106 metros de altura la hacen destacar en el paisaje urbano. En su interior, cuatro enormes
+                    vitrales multicolores de 64 metros de altura llenan el espacio de luz natural y crean un ambiente
+                    espiritual impresionante. La catedral puede albergar hasta 20.000 personas y es sede de importantes
+                    celebraciones religiosas. Está ubicada en el centro de la ciudad, cerca de otros puntos de interés
+                    como el Arcos da Lapa.</p>
+            </div>
+            <figure>
+                <img src="../img/image/catedral-metropolitana-de-san-sebastián.webp"
+                    alt="Imagen de Catedral Metropolitana de San Sebastián">
+            </figure>
         </section>
 
         <section>
-            <h2>Mirante Dona Marta</h2>
-            <p>Este mirador ofrece una de las mejores vistas de la ciudad, incluyendo el Cristo Redentor y el Pan de
-                Azúcar. Es un punto privilegiado para sacar fotos inolvidables, especialmente al atardecer.</p>
+            <div class="txt">
+                <h2>Mirante Dona Marta</h2>
+                <p>El Mirante Dona Marta es un balcón natural situado a 362 metros sobre el nivel del mar. Desde allí se
+                    obtiene una vista panorámica increíble del Cristo Redentor, el Pan de Azúcar, la Bahía de Guanabara,
+                    el estadio Maracaná y gran parte de la ciudad. Es uno de los miradores preferidos para la fotografía
+                    aérea y ha sido escenario de videoclips, películas y eventos. De fácil acceso en coche, también es
+                    un punto seguro y muy frecuentado por turistas. Es ideal para visitar durante el día, especialmente
+                    en días despejados.</p>
+            </div>
+            <figure>
+                <img src="../img/image/mirante-dona-marta.webp" alt="Imagen de Mirante Dona Marta">
+            </figure>
         </section>
 
         <section>
-            <h2>Leblon Beach</h2>
-            <p>La playa de Leblon es una de las más exclusivas y tranquilas de Río. Ideal para relajarse, practicar
-                deportes y disfrutar de la vista del Morro Dois Irmãos al fondo.</p>
+            <div class="txt">
+                <h2>Leblon Beach</h2>
+                <p>Leblon es una playa sofisticada y tranquila que continúa la famosa franja costera de Ipanema. Es un
+                    barrio residencial de alto nivel, frecuentado por familias, deportistas y artistas. Su playa ofrece
+                    aguas limpias, buen oleaje y zonas para deportes como vóley y surf. Uno de sus mayores atractivos es
+                    el Mirador do Leblon, que ofrece una vista impresionante del Morro Dois Irmãos al atardecer. Además,
+                    su avenida costera cuenta con bares, restaurantes y ciclovías, ideales para recorrer a pie o en
+                    bici.</p>
+            </div>
+            <figure>
+                <img src="../img/image/leblon-beach.webp" alt="Imagen de Leblon Beach">
+            </figure>
         </section>
 
         <section>
-            <h2>Praia de Copacabana</h2>
-            <p>Copacabana es la playa más famosa de Brasil. Con su amplia franja de arena, su paseo marítimo ondulado y
-                su ambiente vibrante, es un símbolo del espíritu carioca.</p>
+            <div class="txt">
+                <h2>Praia de Copacabana</h2>
+                <p>La Praia de Copacabana es el corazón turístico de Río de Janeiro. Con más de 4 kilómetros de arena
+                    blanca y un paseo marítimo en forma de olas diseñado por el paisajista Burle Marx, es el lugar ideal
+                    para disfrutar del sol y del ambiente carioca. Aquí se celebran eventos internacionales, como el Año
+                    Nuevo, que atrae a millones de personas. Copacabana también es famosa por sus hoteles históricos,
+                    ferias de artesanía y vida nocturna vibrante. Es una mezcla perfecta entre tradición, modernidad y
+                    alegría tropical.</p>
+            </div>
+            <figure>
+                <img src="../img/image/praia-de-copacabana.webp" alt="Imagen de Praia de Copacabana">
+            </figure>
         </section>
-
     </div>
 
 
