Agregar página de contacto y enlazarla desde el menú de navegación

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
                         <li><a href="#">Dónde comer</a></li>
                         <li><a href="#">Dónde alojarse</a></li>
                         <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contacto</a></li>
+                        <li><a href="pages/contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </header>
