Actualizar la descripción del sitio y enlazar la página de contacto en el menú de navegación

--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/mascara.png" type="image/x-icon">
-    <meta name="description" content="Sitio web dedicado a las atracciones turísticas de Río de Janeiro, Brasil. Descubre los lugares más emblemáticos y actividades imperdibles en la ciudad maravillosa.">
+    <meta name="description"
+        content="Sitio web dedicado a las atracciones turísticas de Río de Janeiro, Brasil. Descubre los lugares más emblemáticos y actividades imperdibles en la ciudad maravillosa.">
     <title>Rio Magico - Atracciones</title>
 
     <!-- CSS -->
@@ -23,22 +24,18 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="pages/atracciones.html">Atracciones</a></li>
+                    <li><a href="#" class="active">Atracciones</a></li>
                     <li><a href="#">Dónde comer</a></li>
                     <li><a href="#">Dónde alojarse</a></li>
                     <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </header>
     </div>
 
     <div class="container-corto">
-        <main>
-
-        </main>
-
-        <section>
+        <section id="cristo">
             <div class="txt">
                 <h2>Cristo Redentor</h2>
                 <p>El Cristo Redentor es uno de los símbolos más representativos de Brasil y una de las siete maravillas
@@ -54,7 +51,7 @@
             </figure>
         </section>
 
-        <section>
+        <section id="tijuca">
             <div class="txt">
                 <h2>Parque Nacional Tijuca</h2>
                 <p>Con más de 3.900 hectáreas, el Parque Nacional Tijuca es considerado el bosque urbano replantado más
@@ -69,7 +66,7 @@
             </figure>
         </section>
 
-        <section>
+        <section id="amanha">
             <div class="txt">
                 <h2>Museo do Amanhã</h2>
                 <p>El Museo del Mañana es un espacio interactivo dedicado a la ciencia y la sostenibilidad. Su edificio,
@@ -85,7 +82,7 @@
             </figure>
         </section>
 
-        <section>
+        <section id="pao">
             <div class="txt">
                 <h2>Pan de Azúcar</h2>
                 <p>El Pan de Azúcar, o "Pão de Açúcar" en portugués, es una formación rocosa que se eleva 396 metros
@@ -101,7 +98,7 @@
             </figure>
         </section>
 
-        <section>
+        <section id="lage">
             <div class="txt">
                 <h2>Parque Lage</h2>
                 <p>Ubicado al pie del Corcovado, el Parque Lage es un oasis natural con un rico valor histórico y
@@ -117,7 +114,7 @@
             </figure>
         </section>
 
-        <section>
+        <section id="chinesa">
             <div class="txt">
                 <h2>Vista Chinesa</h2>
                 <p>La Vista Chinesa es uno de los miradores más bonitos de Río de Janeiro, situado a 380 metros de
@@ -132,7 +129,7 @@
             </figure>
         </section>
 
-        <section>
+        <section id="catedral">
             <div class="txt">
                 <h2>Catedral Metropolitana de San Sebastián</h2>
                 <p>Diseñada por el arquitecto Edgar de Oliveira da Fonseca, la Catedral Metropolitana de San Sebastián
@@ -149,7 +146,7 @@
             </figure>
         </section>
 
-        <section>
+        <section id="marta">
             <div class="txt">
                 <h2>Mirante Dona Marta</h2>
                 <p>El Mirante Dona Marta es un balcón natural situado a 362 metros sobre el nivel del mar. Desde allí se
@@ -164,7 +161,7 @@
             </figure>
         </section>
 
-        <section>
+        <section id="leblon">
             <div class="txt">
                 <h2>Leblon Beach</h2>
                 <p>Leblon es una playa sofisticada y tranquila que continúa la famosa franja costera de Ipanema. Es un
@@ -179,7 +176,7 @@
             </figure>
         </section>
 
-        <section>
+        <section id="copacabana">
             <div class="txt">
                 <h2>Praia de Copacabana</h2>
                 <p>La Praia de Copacabana es el corazón turístico de Río de Janeiro. Con más de 4 kilómetros de arena
@@ -194,7 +191,6 @@
             </figure>
         </section>
     </div>
-
 
     <footer>
         <div class="container">
