--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../img/mascara.png" type="image/x-icon">
     <meta name="description" content="Sitio web para ponerte en contacto con Rio Magico.">
 
     <title>Rio Magico - Contacto</title>
@@ -31,6 +32,35 @@
                 </ul>
             </nav>
         </header>
+    </div>
+
+    <div class="container-corto">
+        <main>
+            <div class="txt">
+                <h2>Contacto</h2>
+                <p>Si tienes alguna pregunta o necesitas más información sobre nuestros tours, atracciones recomendadas
+                    o consejos para tu viaje a Rio de Janeiro, no dudes en ponerte en contacto con nosotros. Nuestro
+                    equipo estará encantado de ayudarte a planificar una experiencia inolvidable en la Ciudad
+                    Maravillosa.</p>
+
+                <p>También puedes contactarnos si quieres compartir tu experiencia o sugerir nuevas atracciones para
+                    incluir en nuestra guía. ¡Valoramos tus comentarios!</p>
+            </div>
+            <div class="container-form">
+                <form action="#" method="post">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" name="nombre" required>
+    
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+    
+                    <label for="mensaje">Mensaje:</label>
+                    <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
+
+                    <input id="btn-submit" type="submit" value="Enviar">
+                </form>
+            </div>
+        </main>
     </div>
 
     <footer>
