--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -48,14 +48,28 @@
             </div>
             <div class="container-form">
                 <form action="#" method="post">
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" id="nombre" name="nombre" required>
-    
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
+                    <div class="container-nombre-email">
+                        <div class="container-nombre">
+                            <label for="nombre">Nombre:</label>
+                            <input type="text" id="nombre" name="nombre" required>
+                        </div>
+
+                        <div class="container-email">
+                            <label for="email">Email:</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                    </div>
     
                     <label for="mensaje">Mensaje:</label>
                     <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
+
+                    <label for="tema">Tema:</label>
+                    <select id="tema" name="tema" required>
+                        <option value="atracciones">Atracciones</option>
+                        <option value="comida">Comida</option>
+                        <option value="alojamiento">Alojamiento</option>
+                        <option value="otros">Otros</option>
+                    </select>
 
                     <input id="btn-submit" type="submit" value="Enviar">
                 </form>
