Agregar información adicional en la sección de contacto y mejorar el formulario con un campo de selección para el tema. Ajustar estilos para una mejor presentación y responsividad.

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,6 +45,11 @@
 
                 <p>También puedes contactarnos si quieres compartir tu experiencia o sugerir nuevas atracciones para
                     incluir en nuestra guía. ¡Valoramos tus comentarios!</p>
+
+                <p>Te responderemos en menos de 24hs. Nuestro equipo de <abbr title="Atención al Cliente">AC</abbr> está
+                    disponible de lunes a viernes.</p>
+                <p><strong>¡Tu opinión cuenta!</strong> Ayudanos a mejorar nuestra guía de Río.</p>
+
             </div>
             <div class="container-form">
                 <form action="#" method="post">
@@ -59,12 +64,13 @@
                             <input type="email" id="email" name="email" required>
                         </div>
                     </div>
-    
+
                     <label for="mensaje">Mensaje:</label>
                     <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
 
                     <label for="tema">Tema:</label>
                     <select id="tema" name="tema" required>
+                        <option value="">Seleccione un tema</option>
                         <option value="atracciones">Atracciones</option>
                         <option value="comida">Comida</option>
                         <option value="alojamiento">Alojamiento</option>
