--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,6 +31,22 @@
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
+            <!-- Responsive -->
+            <input type="checkbox" class="check" id="check" />
+            <label for="check" class="hamburger-button">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </label>
+            <nav class="mobile-menu">
+                <ul>
+                    <li><a href="atracciones.html">Atracciones</a></li>
+                    <li><a href="#">Dónde comer</a></li>
+                    <li><a href="#">Dónde alojarse</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
         </header>
     </div>
 
