--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     <div class="presentacion">
         <div class="container-extenso">
             <header>
-                <a href="/index.html">
+                <a href="/home.html">
                     <figure>
                         <img src="img/mascara.png" alt="Logo de RioMagico">
                     </figure>
