Refactor hamburger menu markup to use <span> elements for better semantics and styling consistency across pages.

--- a/home.html
+++ b/home.html
@@ -37,9 +37,9 @@
                 <!-- Responsive -->
                 <input type="checkbox" class="check" id="check" />
                 <label for="check" class="hamburger-button">
-                    <div class="line1"></div>
-                    <div class="line2"></div>
-                    <div class="line3"></div>
+                    <span class="line1"></span>
+                    <span class="line2"></span>
+                    <span class="line3"></span>
                 </label>
                 <nav class="mobile-menu">
                     <ul>
